fix: Add spacing to dt list.

--- a/src/templates/page.sass
+++ b/src/templates/page.sass
@@ -5,20 +5,10 @@
 @import "bulma/sass/elements/table.sass"
 
 .generated-page
-    // &.hero
-    //     background: url('../assets/erika-giraud-6oUY_Hnwmv8-unsplash.jpg') center -4rem // Photo by Erika Giraud on Unsplash
-    //     background-size: cover
-    //     background-position-y: 0
-    .hero-body
-        // background: rgba(0, 0, 0, .125)
-
     .container
         > h1
-            // background-color: rgba(32, 30, 85, .90) // $dark-blue
-            // font-size: 4rem
             color: $white
             padding: 1rem
+    .content dd
+        margin-bottom: 2rem
 
-.circle
-    li
-        list-style-type: circle
